// Gym app schema — design source of truth.
// Render: paste into https://dbdiagram.io  (or `npx @dbml/cli dbml2sql schema.dbml --postgres`)

Project gym_app {
  database_type: 'PostgreSQL'
  Note: 'Workout tracking. Nothing here is implemented yet — this file is the design.'
}

Table user {
  id    uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
}

// One user has many training sessions.
Table training_session {
  id            uuid [pk, default: `gen_random_uuid()`]
  user_id       uuid [not null, ref: > user.id]
  type          session_type [not null]
  created_at    timestamptz  [not null, default: `now()`]

  indexes {
    (user_id, created_at)
  }
}

// The exercise catalogue: one row per movement, referenced by performed_exercise.
Table exercise_definition {
  id         uuid [pk, default: `gen_random_uuid()`]
  name       varchar(120) [not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

// One prescription, referenced by many performed_exercise rows.
Table exercise_prescription {
  id uuid [pk, default: `gen_random_uuid()`]
}

// One movement as actually performed in one session.
// Many per training_session; many can reference the same exercise_definition.
Table performed_exercise {
  id                       uuid [pk, default: `gen_random_uuid()`]
  training_session_id      uuid [not null, ref: > training_session.id]
  exercise_definition_id   uuid [not null, ref: > exercise_definition.id]
  exercise_prescription_id uuid [null, ref: > exercise_prescription.id]
  created_at               timestamptz [not null, default: `now()`, note: 'also the order within the session']

  indexes {
    (training_session_id, created_at)
    (exercise_definition_id)
  }
}

// One set of one performed_exercise. Many sets per performed_exercise.
Table performed_set {
  id                    uuid [pk, default: `gen_random_uuid()`]
  performed_exercise_id uuid [not null, ref: > performed_exercise.id]
  weight_kg             decimal(6,2) [null, note: 'always stored metric; convert at display time']
  reps                  int [null]
  distance_m            decimal(9,2) [null, note: 'always stored metric; convert at display time']
  duration_s            int [null, note: 'for time-based work instead of reps']
  rpe                   decimal(3,1) [null]
  created_at            timestamptz [not null, default: `now()`, note: 'also the order within the performed_exercise']

  indexes {
    (performed_exercise_id, created_at)
  }
}

// One rep of one performed_set. Many reps per performed_set.
Table performed_rep {
  id               uuid [pk, default: `gen_random_uuid()`]
  performed_set_id uuid [not null, ref: > performed_set.id]
  rep_index        int  [not null, note: 'ordinal within the performed_set']

  indexes {
    (performed_set_id, rep_index) [unique]
  }
}

Enum unit_system {
  metric
  imperial
}

Enum session_type {
  strength
  cardio
  mobility
  mixed
}

Enum modality {
  barbell
  dumbbell
  machine
  bodyweight
  cardio
}

Enum muscle_group {
  chest
  back
  shoulders
  quads
  hamstrings
  glutes
  arms
  core
  full_body
}
